--- a/GETTING-STARTED.html
+++ b/GETTING-STARTED.html
@@ -30,7 +30,7 @@
                 <div class="column large-7">
                   <h1>Prototyping kit</h1>
                   <p>
-                    This prototype kit provides a simple waty to make
+                    This prototype kit provides a simple way to make
                     interactive prototypes. These prototypes can be used to
                     show ideas to people you work with, and to do user
                     reasearch.
@@ -40,8 +40,7 @@
                   <p>
                     You will need a text editor to work with the prototype
                     kit. We recommend the <a href="https://atom.io">Atom text
-                    editor</a>. It's both free and works on both Mac and
-                    Windows.
+                    editor</a>. It's free and works on both Mac and Windows.
                   </p>
                   <p>
                     <ul>
