Add one and two column templates for demo purposes

--- a/GETTING-STARTED.html
+++ b/GETTING-STARTED.html
@@ -48,6 +48,9 @@
                         <a href="#adding-pages">Adding pages</a>
                       </li>
                       <li>
+                        <a href="#templates">Template</a>
+                      </li>
+                      <li>
                         <a href="#basic-form-examples">Form examples</a>
                       </li>
                       <li>
@@ -64,6 +67,15 @@
                     <p>
                       <em>Instructions on adding new pages to the prototype by
                       copying the template and linking between them</em>
+                    </p>
+                  </section>
+
+                  <section>
+                    <h2 id="templates">Templates</h2>
+                    <p>
+                      There is a <a href="template-one-column.html">one column
+                      template</a> and a <a href="template-two-column.html">
+                      two column template</a> to get you started.
                     </p>
                   </section>
 
