Update content on forms page

--- a/forms.html
+++ b/forms.html
@@ -24,7 +24,7 @@
         </header>
         <main id="main" class="main wrap">
           <header>
-            <h1 id="form-elements">Form Elements</h1>
+            <h1 id="form-elements">Form elements</h1>
              <p>
                 <ul>
                   <h3 class="h4">Inputs</h3>
@@ -56,7 +56,7 @@
                     <a href="#selection-radio">Radio buttons</a>
                   </li>
                   <li>
-                    <a href="#selection-dropdown">Select dropdowns</a>
+                    <a href="#selection-dropdown">Drop down lists</a>
                   </li>
                   <li>
                     <a href="#selection-dropdown">Tap buttons</a>
@@ -77,12 +77,12 @@
                 <h4 id="input-text"><span class="example-heading">Text input</span></h4>
                 <div class="example-panel">
                   <div class="form-row">
-                    <label for="text-field">Enter text <em>e.g. Name</em></label>
+                    <label for="text-field">Your name </label>
                     <input type="text" id="text-field">
                   </div>
                 </div>
                 <pre>&lt;div class="form-row"&gt;
-  &lt;label for="text-input-example"&gt;Enter text &lt;em&gt;e.g. Name&lt;/em&gt;&lt;/label&gt;
+  &lt;label for="text-input-example"&gt;Enter text &lt;/label&gt;
   &lt;input type="text" id="text-input-example"&gt;
 &lt;/div&gt;</pre>
               </article>
@@ -92,12 +92,12 @@
                 <h4 id="input-password"><span class="example-heading">Password input</span></h4>
                 <div class="example-panel">
                   <div class="form-row">
-                    <label for="password-input-example">Enter your password</label>
+                    <label for="password-input-example">Your password</label>
                     <input type="password" id="password-input-example">
                   </div>
                 </div>
                 <pre>&lt;div class="form-row"&gt;
-  &lt;label for="password-input-example"&gt;Enter your passsword&lt;/label&gt;
+  &lt;label for="password-input-example"&gt;Your passsword&lt;/label&gt;
   &lt;input type="password" id="password-input-example"&gt;
 &lt;/div&gt; </pre>
               </article>
@@ -107,12 +107,12 @@
                 <h4 id="input-email"><span class="example-heading">Email input</span></h4>
                 <div class="example-panel">
                   <div class="form-row">
-                    <label for="email-input-example">Enter email</label>
+                    <label for="email-input-example">Your email</label>
                     <input type="email" id="email-input-example">
                   </div>
                 </div>
                 <pre>&lt;div class="form-row"&gt;
-  &lt;label for="email-input-example"&gt;Enter email&lt;/label&gt;
+  &lt;label for="email-input-example"&gt;Your email&lt;/label&gt;
   &lt;input type="email" id="email-input-example"&gt;
 &lt;/div&gt;</pre>
               </article>
@@ -122,12 +122,12 @@
                 <h4 id="input-number"><span class="example-heading">Number input</span></h4>
                 <div class="example-panel">
                   <div class="form-row">
-                    <label for="number-field-example">Enter a number</label>
+                    <label for="number-field-example">Your account number</label>
                     <input type="number" id="number-field-example">
                   </div>
                 </div>
                 <pre>&lt;div class="form-row"&gt;
-  &lt;label for="number-input-example"&gt;Enter a number&lt;/label&gt;
+  &lt;label for="number-input-example"&gt;Your account number&lt;/label&gt;
   &lt;input type="number" id="number-input-example"&gt;
 &lt;/div&gt;</pre>
               </article>
@@ -152,7 +152,7 @@
                 <h4 id="input-tel"><span class="example-heading">Telephone input</span></h4>
                 <div class="example-panel">
                   <div class="form-row">
-                    <label for="tel-input-example">Enter Telephone number</label>
+                    <label for="tel-input-example">Your telephone number</label>
                     <input type="telephone" id="tel-input-example">
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                   </div>
                 </div>
                 <pre>&lt;div class="form-row"&gt;
-  &lt;label for="inputs-textarea"&gt;Your telephone number&lt;/label&gt;
+  &lt;label for="inputs-textarea"&gt;Tell us what's wrong&lt;/label&gt;
   &lt;textarea id="inputs-textarea" cols="30" rows="10"&gt; &lt;/textarea&gt;
 &lt;/div&gt;</pre>
               </article>
@@ -189,28 +189,28 @@
                 <h4 id="selection-checkbox"><span class="example-heading">Checkboxes <small>(block-labels)</small></span></h4>
                 <div class="example-panel">
                   <fieldset>
-                    <legend>Select all that apply</legend>
+                    <legend>What are your favourite toppings?</legend>
                     <div class="form-row">
-                      <label for="box1" class="block-label"><input class="input-inline" id="box1" type="checkbox"> Choice 1 </label>
+                      <label for="box1" class="block-label"><input class="input-inline" id="box1" type="checkbox">Cheese</label>
                     </div>
                     <div class="form-row">
-                      <label for="box2" class="block-label"><input class="input-inline" id="box2" type="checkbox"> Choice 2 </label>
+                      <label for="box2" class="block-label"><input class="input-inline" id="box2" type="checkbox">Pepperoni</label>
                     </div>
                     <div class="form-row">
-                      <label class="block-label" for="box3"><input class="input-inline" id="box3" type="checkbox"> Choice 3 </label>
+                      <label class="block-label" for="box3"><input class="input-inline" id="box3" type="checkbox">Anchovies</label>
                     </div>
                   </fieldset>
                 </div>
                 <pre>&lt;fieldset&gt;
-  &lt;legend&gt;Select all that apply&lt;/legend&gt;
+  &lt;legend&gt;What are your favourite toppings?&lt;/legend&gt;
   &lt;div class="form-row"&gt;
-    &lt;label for="box1" class="block-label"&gt;&lt;input class="input-inline" id="box1" type="checkbox"&gt; Choice 1 &lt;/label&gt;
+    &lt;label for="box1" class="block-label"&gt;&lt;input class="input-inline" id="box1" type="checkbox"&gt;Cheese&lt;/label&gt;
   &lt;/div&gt;
   &lt;div class="form-row"&gt;
-    &lt;label for="box2" class="block-label"&gt;&lt;input class="input-inline" id="box2" type="checkbox"&gt; Choice 2 &lt;/label&gt;
+    &lt;label for="box2" class="block-label"&gt;&lt;input class="input-inline" id="box2" type="checkbox"&gt;Pepperoni&lt;/label&gt;
   &lt;/div&gt;
   &lt;div class="form-row"&gt;
-    &lt;label class="block-label" for="box3"&gt;&lt;input class="input-inline" id="box3" type="checkbox"&gt; Choice 3 &lt;/label&gt;
+    &lt;label class="block-label" for="box3"&gt;&lt;input class="input-inline" id="box3" type="checkbox"&gt;Anchovies&lt;/label&gt;
   &lt;/div&gt;
 &lt;/fieldset&gt;</pre>
               </article>
@@ -219,26 +219,26 @@
                 <h4 id="selection-radio"><span class="example-heading">Radio buttons basic</span></h4>
                 <div class="example-panel">
                   <fieldset>
-                    <legend>Select Gender</legend>
+                    <legend>Are you going to come to the meeting?</legend>
                     <div class="form-row">
-                      <input id="basic-radio-example-male" type="radio" name="gender" value="male">
-                      <label for="basic-radio-example-male">Male</label>
+                      <input id="basic-radio-example-yes" type="radio" name="meeting" value="yes">
+                      <label for="basic-radio-example-yes">Yes</label>
                     </div>
                     <div class="form-row">
-                      <input id="basic-radio-example-male" type="radio" name="gender" value="female">
-                      <label for="basic-radio-example-female">Female</label>
+                      <input id="basic-radio-example-no" type="radio" name="meeting" value="no">
+                      <label for="basic-radio-example-no">No</label>
                     </div>
                   </fieldset>
                 </div>
                 <pre>&lt;fieldset&gt;
-  &lt;legend&gt;Select Gender&lt;/legend&gt;
+  &lt;legend&gt;Are you going to come to the meeting?&lt;/legend&gt;
   &lt;div class="form-row"&gt;
-    &lt;input id="basic-radio-example-male" type="radio" name="gender" value="male"&gt;
-    &lt;label for="basic-radio-example-male"&gt;Male&lt;/label&gt;
+    &lt;input id="basic-radio-example-yes" type="radio" name="meeting" value="yes"&gt;
+    &lt;label for="basic-radio-example-yes"&gt;Yes&lt;/label&gt;
   &lt;/div&gt;
   &lt;div class="form-row"&gt;
-    &lt;input id="basic-radio-example-male" type="radio" name="gender" value="female"&gt;
-    &lt;label for="basic-radio-example-female"&gt;Female&lt;/label&gt;
+    &lt;input id="basic-radio-example-no" type="radio" name="meeting" value="no"&gt;
+    &lt;label for="basic-radio-example-female"&gt;No&lt;/label&gt;
   &lt;/div&gt;
 &lt;/fieldset&gt;</pre>
               </article>
@@ -248,22 +248,22 @@
                 <h4 id="selection-radio-inilne"><span class="example-heading">Radio buttons inline</span></h4>
                 <div class="example-panel">
                   <fieldset>
-                    <legend>Select Gender</legend>
+                    <legend>Are you going to come to the meeting?</legend>
                     <div class="form-row">
-                      <input id="inline-radio-example-male" type="radio" name="gender" value="male">
-                      <label for="inline-radio-example-male">Male</label>
-                      <input id="inline-radio-example-female"  type="radio" name="gender" value="female">
-                      <label for="inline-radio-example-male">Female</label>
+                      <input id="inline-radio-example-yes" type="radio" name="meeting" value="yes">
+                      <label for="inline-radio-example-yes">Yes</label>
+                      <input id="inline-radio-example-no"  type="radio" name="meeting" value="no">
+                      <label for="inline-radio-example-no">No</label>
                     </div>
                   </fieldset>
                 </div>
                 <pre>&lt;fieldset&gt;
-  &lt;legend&gt;Select Gender&lt;/legend&gt;
+  &lt;legend&gt;Are you going to come to the meeting?&lt;/legend&gt;
   &lt;div class="form-row"&gt;
-    &lt;input id="inline-radio-example-male" type="radio" name="gender" value="male"&gt;
-    &lt;label for="inline-radio-example-male"&gt;Male&lt;/label&gt;
-    &lt;input id="inline-radio-example-female"  type="radio" name="gender" value="female"&gt;
-    &lt;label for="inline-radio-example-male"&gt;Female&lt;/label&gt;
+    &lt;input id="inline-radio-example-yes" type="radio" name="meeting" value="yes"&gt;
+    &lt;label for="inline-radio-example-yes"&gt;Yes&lt;/label&gt;
+    &lt;input id="inline-radio-example-no"  type="radio" name="meeting" value="no"&gt;
+    &lt;label for="inline-radio-example-no"&gt;No&lt;/label&gt;
   &lt;/div&gt;
 &lt;/fieldset&gt;</pre>
               </article>
@@ -273,29 +273,29 @@
                 <h4 id="selection-radio-block"><span class="example-heading">Radio buttons block labels</span></h4>
                 <div class="example-panel">
                   <fieldset>
-                    <legend>Select Gender</legend>
+                    <legend>Are you going to come to the meeting?</legend>
                     <div class="form-row">
-                      <label for="male-block" class="block-label">
-                        <input id="male-block" class="input-inline" type="radio" name="gender-block" value="male">
-                        Male
+                      <label for="yes-block" class="block-label">
+                        <input id="yes-block" class="input-inline" type="radio" name="meeting-block" value="yes">
+                        Yes
                       </label>
-                      <label for="female-block" class="block-label">
-                        <input id="female-block" class="input-inline" type="radio" name="gender-block" value="female">
-                        Female
+                      <label for="no-block" class="block-label">
+                        <input id="no-block" class="input-inline" type="radio" name="meeting-block" value="No">
+                        No
                       </label>
                     </div>
                   </fieldset>
                 </div>
                 <pre>&lt;fieldset&gt;
-  &lt;legend&gt;Select Gender&lt;/legend&gt;
+  &lt;legend&gt;Are you going to come to the meeting?&lt;/legend&gt;
   &lt;div class="form-row"&gt;
-    &lt;label for="" class="block-label"&gt;
-      &lt;input id="" class="input-inline" type="radio" name="gender-block" value=""&gt;
-      Male
+    &lt;label for="yes-block" class="block-label"&gt;
+      &lt;input id="yes-block" class="input-inline" type="radio" name="meeting-block" value="yes"&gt;
+      Yes
     &lt;/label&gt;
-    &lt;label for="" class="block-label"&gt;
-      &lt;input id="" class="input-inline" type="radio" name="gender-block" value=""&gt;
-      Female
+    &lt;label for="no-block" class="block-label"&gt;
+      &lt;input id="no-block" class="input-inline" type="radio" name="meeting-block" value="no"&gt;
+      No
     &lt;/label&gt;
   &lt;/div&gt;
 &lt;/fieldset&gt;</pre>
@@ -366,7 +366,7 @@
 
 
             <section class="row margin-b">
-              <header><h3 class="h2">Form Examples</h3></header>
+              <header><h3 class="h2">Form examples</h3></header>
               <!--
                 * Name - full name / title, first name, lastname
                 * Login
@@ -419,7 +419,7 @@
                 <h4 id="dob-form"><span class="example-heading">Date of birth input <small>(using the grid to set input&nbsp;widths)</small></span></h4>
                 <div class="example-panel">
                   <fieldset class="dob-fields">
-                    <legend>Please enter your date of birth</legend>
+                    <legend>Your date of birth</legend>
                     <div class="form-row">
                       <div class="row">
                         <div class="column xsmall-4 small-2 medium-3 large-2">
@@ -439,7 +439,7 @@
                   </fieldset>
                 </div>
                 <pre>&lt;fieldset class="dob-fields"&gt;
-  &lt;legend&gt;Please enter your date of birth&lt;/legend&gt;
+  &lt;legend&gt;Your date of birth&lt;/legend&gt;
   &lt;div class="form-row"&gt;
     &lt;div class="row"&gt;
       &lt;div class="column xsmall-4 small-2 medium-3 large-2"&gt;
@@ -537,17 +537,17 @@
                       <textarea name="feedback-text-example" id="feedback-text-example column medium-7" cols="20" rows="4"></textarea>
                     </div>
                     <div class="form-row">
-                      <input class="btn btn-primary column small-4" type="submit" value="Send">
+                      <input class="btn btn-primary column small-4" type="submit" value="Send feedback">
                     </div>
                   </form>
                 </div>
                 <pre>&lt;form&gt;
   &lt;div class="form-row"&gt;
     &lt;label for="feedback-text-example"&gt;&lt;/label&gt;
-    &lt;textarea name="" id="feedback-text-example" cols="30" rows="4"&gt;&lt;/textarea&gt;
+    &lt;textarea name="feedback-text-example" id="feedback-text-example" cols="30" rows="4"&gt;&lt;/textarea&gt;
   &lt;/div&gt;
   &lt;div class="form-row"&gt;
-    &lt;input class="btn btn-primary column small-4dateo" type="submit" value="send"&gt;
+    &lt;input class="btn btn-primary column small-4dateo" type="submit" value="Send feedback"&gt;
   &lt;/div&gt;
 &lt;/form&gt;</pre>
               </article>
@@ -575,12 +575,12 @@
 
 
               <article id="" class="column medium-7 margin-bh">
-                <h4 id="address-form"><span class="example-heading">Subscribe&ast; </span></h4>
+                <h4 id="address-form"><span class="example-heading">Subscribe </span></h4>
                 <!-- example -->
                 <div class="example-panel">
                   <form action="" class="">
                     <fieldset>
-                      <legend>Subscribe and keep up to date with ours latest offers and&nbsp;news</legend>
+                      <legend>Subscribe and keep up to date with our latest offers and news</legend>
                       <label for="signup-email-example">Your email</label>
                       <div class="form-row search-form">
                         <input id="signup-email-example" type="email">
@@ -589,7 +589,7 @@
 
                       <div class="form-row">
                         <input id="agree-example" class="input-inline" type="checkbox">
-                        <label for="agree-example">I would like to receive updates from other co-op services</label>
+                        <label for="agree-example">I would like to receive updates from other Co-op services</label>
                       </div>
 
                    </fieldset>
@@ -598,7 +598,7 @@
                 <!-- //example -->
                 <pre>&lt;form&gt;
   &lt;fieldset&gt;
-    &lt;legend&gt;Subscribe and keep up to date with ours latest offers and&nbsp;news&lt;/legend&gt;
+    &lt;legend&gt;Subscribe and keep up to date with our latest offers and news&lt;/legend&gt;
     &lt;label for="signup-email-example"&gt;Your email&lt;/label&gt;
     &lt;div class="form-row search-form"&gt;
       &lt;input id="signup-email-example" type="email"&gt;
@@ -607,7 +607,7 @@
 
     &lt;div class="form-row"&gt;
       &lt;input id="agree-example" class="input-inline" type="checkbox"&gt;
-      &lt;label for="agree-example"&gt;I would like to receive updates from other co-op services&lt;/label&gt;
+      &lt;label for="agree-example"&gt;I would like to receive updates from other Co-op services&lt;/label&gt;
     &lt;/div&gt;
 
  &lt;/fieldset&gt;
